Resolves: tdf#107730 ensure per-thread epoxy_handle_external_wglMakeCurrent

Change-Id: Idc1e2da3a02715a09b5b8f4e8e736b8806e59f8e